# Paddle-Lite

./: .gitmodules
lite/api/: CMakeLists.txt  cxx_api.h  cxx_api_impl.cc  paddle_api.cc  paddle_api.h  paddle_use_passes.h
lite/backends/cuda/: CMakeLists.txt  context.h  cuda_utils.h  float16.h  float16_test.cc  float16_test.cu
lite/backends/cuda/math/: CMakeLists.txt  activation.cu  batched_gemm.cc  bias.cu  bias.h  cudnn_conv.cc  cudnn_gru.cc  cudnn_gru.h  elementwise.cu  gemm.cc  transpose.cu  transpose.h  type_trans.cu  type_trans.h  utils.h
lite/core/: CMakeLists.txt  device_info.h  op_registry.cc  optimizer.h  program.cc  program.h
lite/core/mir/: CMakeLists.txt  static_kernel_pick_pass.cc  static_kernel_pick_pass.h
lite/core/profile/: CMakeLists.txt  precision_profiler.h
lite/kernels/cuda/: CMakeLists.txt  attention_padding_mask_compute.cu  attention_padding_mask_compute.h  attention_padding_mask_compute_test.cc  calib_compute.cu  concat_compute.cu  concat_compute.h  concat_compute_test.cc  conv_compute_test.cc  elementwise_compute.cu  elementwise_compute.h  elementwise_compute_test.cc  fetch_compute.cc  fusion_gru_compute.cc  fusion_gru_compute.h  fusion_gru_compute_test.cc  lookup_table_compute.cu  lookup_table_compute.h  lookup_table_compute_test.cc  match_matrix_tensor_compute.cu  match_matrix_tensor_compute.h  match_matrix_tensor_compute_test.cc  mul_compute.cc  mul_compute.h  mul_compute_test.cc  relu_compute.cu  relu_compute.h  relu_compute_test.cc  (+40 more)
lite/operators/: CMakeLists.txt  fusion_gru_op.cc  fusion_gru_op.h  op_params.h
(+8 files in other folders)
